--- a/public/assets/css/fox.css
+++ b/public/assets/css/fox.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: transparent;
-  color: whitesmoke;
+  color: black;
   height: 300px;
   width: 400px;
 }
@@ -14,7 +14,7 @@ body {
 
 /* TODO fix text wrap */
 #speech_bubble {
-  padding: 0.4rem 0.8rem;
+  padding: 0.5rem 1rem;
   font-family: Arial, sans-serif;
   font-size: 1.5rem;
   text-wrap: normal;
@@ -22,13 +22,16 @@ body {
   right: 50px;
   top: 45%;
   max-width: 150px;
-  background-color: #333;
-  border: 2px solid forestgreen;
+  color: rgba(255, 255, 255, 0.9);
+  background-color: #66162d;
+  border: 3px solid #66162d;
   border-radius: 1rem 1rem 1rem 0rem;
   transform: translatey(0px);
   -webkit-animation: float 3s ease-in-out infinite;
   animation: float 3s ease-in-out infinite;
   text-transform: lowercase;
+  box-shadow: -2px 8px 15px 1px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: -2px 8px 15px 1px rgba(0, 0, 0, 0.28);
 }
 
 @-webkit-keyframes float {
