--- a/public/assets/css/fox.css
+++ b/public/assets/css/fox.css
@@ -18,20 +18,24 @@ body {
   font-family: Arial, sans-serif;
   font-size: 1.5rem;
   text-wrap: normal;
-  position: absolute;
-  right: 50px;
-  top: 45%;
   max-width: 150px;
   color: rgba(255, 255, 255, 0.9);
   background-color: #66162d;
   border: 3px solid #66162d;
   border-radius: 1rem 1rem 1rem 0rem;
   transform: translatey(0px);
-  -webkit-animation: float 3s ease-in-out infinite;
-  animation: float 3s ease-in-out infinite;
   text-transform: lowercase;
   box-shadow: -2px 8px 15px 1px rgba(0, 0, 0, 0.28);
   -webkit-box-shadow: -2px 8px 15px 1px rgba(0, 0, 0, 0.28);
+}
+
+.outer {
+  width: 150px;
+  position: absolute;
+  right: 35px;
+  top: 155px;
+  -webkit-animation: float 3s ease-in-out infinite;
+  animation: float 3s ease-in-out infinite;
 }
 
 @-webkit-keyframes float {
