--- a/public/assets/css/leaderboard.css
+++ b/public/assets/css/leaderboard.css
@@ -15,6 +15,15 @@ ul {
   max-width: 50em;
 }
 
+@media screen and (min-width: 500px) {
+  li span:last-child {
+    text-align: end;
+  }
+  li:first-child {
+    transform: scale(1.1);
+  }
+}
+
 li {
   margin-bottom: 0.5em;
   display: grid;
@@ -29,7 +38,11 @@ li:hover {
 }
 
 li:first-child {
-  font-size: 1.25em;
+  transform: scale(1.2);
+}
+
+li:first-child:hover {
+  transform: scale(1.125);
 }
 
 li span:first-child {
@@ -43,26 +56,14 @@ li:nth-child(2n) {
 }
 
 li span:last-child {
-  text-align: end;
+  text-align: center;
 }
 
 li span:last-child::after {
-  content: "";
+  content: " ";
   display: inline-block;
   height: 0.75em;
   width: 0.75em;
-  margin-left: 0.5em;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("../images/rupee.png");
-}
-
-li:first-child span:last-child::after {
-  content: "";
-  display: inline-block;
-  height: 1em;
-  width: 1em;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
