--- a/public/assets/css/fox.css
+++ b/public/assets/css/fox.css
@@ -13,7 +13,7 @@ body {
 }
 
 /* TODO fix text wrap */
-#speech_bubble {
+#speech_span {
   font-family: Arial, sans-serif;
   font-size: 1.5rem;
   color: rgba(255, 255, 255, 0.9);
@@ -23,7 +23,7 @@ body {
   word-break: break-word;
 }
 
-.outer {
+#speech_bubble {
   max-width: 125px;
   padding: 0.5rem 1rem;
   position: absolute;
