--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,10 @@ html,
 body {
   background-color: #000;
   color: white;
+  overflow: hidden;
+}
+
+body {
   padding: 2%;
 }
 
@@ -17,6 +21,7 @@ h1 {
   text-align: center;
   font-size: 5rem;
   word-break: break-all;
+  margin: 0;
 }
 
 p {
@@ -25,23 +30,40 @@ p {
   text-align: center;
 }
 
-.features {
-  margin: 0 auto;
-  text-align: center;
-  padding-top: 50px;
+header {
+  display: grid;
+  grid-template: 2fr 1fr / 1fr 1fr;
+  align-items: center;
 }
 
-.features > a {
-  padding: 0.5rem 1rem;
-  margin: 5px;
-  border-radius: 5px;
-  font-family: sans-serif;
-  text-transform: lowercase;
-  background-color: green;
-  color: white;
+header h1 {
+  grid-column: 1;
 }
 
-.features > a:hover {
-  text-decoration: line-through;
-  background-color: rgba(0, 128, 0, 0.527);
+header p {
+  grid-row: 2;
+}
+
+header .features {
+  grid-column: 2;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(241, 241, 241, 0);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #797979;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
