fix: home page template typo

--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -20,7 +20,7 @@
     </li>
     <li>
       <span>Broadcast Polling Rate</span>
-      <code>{{ config.broadcastPollRage/1000 }} sec</code>
+      <code>{{ config.broadcastPollRate/1000 }} sec</code>
     </li>
   </ul>
 </main>
