fix: html title now renders correctly

--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>{{ botname }} UI</title>
+    <title>{{ config.name }} UI</title>
     <style>
         {% include "style.css" %}
     </style>
