fix: polling rates are now consistently in seconds (#31)

--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -16,11 +16,19 @@
     </li>
     <li>
       <span>Chat Polling Rate</span>
-      <code>{{ config.chatPollRate/1000 }} sec</code>
+      <code>{{ config.chatPollRate }} sec</code>
     </li>
     <li>
       <span>Broadcast Polling Rate</span>
-      <code>{{ config.broadcastPollRate/1000 }} sec</code>
+      <code>{{ config.broadcastPollRate }} sec</code>
+    </li>
+    <li>
+      <span>Registered Listeners</span>
+      <code>{{ listeners }}</code>
+    </li>
+    <li>
+      <span>User Cache Size</span>
+      <code>{{ userCacheSize }}</code>
     </li>
   </ul>
 </main>
