feat: allow user-defined additional home page routes
- update readme and ts sample
- improve yarn scripts for build and watch

--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -5,6 +5,9 @@
   <p id="loading">welcome to {{ config.name }}</p>
   <div class="features">
     <a href="/auth">Login</a>
+    {% for route in routes %}
+    <a href="{{ route[0] }}">{{route[1] | lower }}</a>
+    {% endfor %}
   </div>
 </header>
 <main>
