feat: add callHistory property to api yuki and root page (#44)

--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -33,6 +33,10 @@
       <span>User Cache Size</span>
       <code>{{ userCacheSize }}</code>
     </li>
+    <li>
+      <span>API Call Count</span>
+      <code>{{ callHistory.length }}</code>
+    </li>
   </ul>
 </main>
 {% endblock %}
