--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -42,7 +42,7 @@
       <code>{{ callHistory.length }}</code>
     </li>
     <li>
-      <span>API Call per Min</span>
+      <span>API Calls per Min</span>
       <code>{{ callPerMin }}</code>
     </li>
   </ul>
